# Quick3D_Show_Car

./: .gitignore  AnyConv_com__su7.qml  CMakeLists.txt  Main.qml  README.md  main.cpp  resource.qrc
meshes/: object_0.mesh  object_1.mesh  object_10.mesh  object_11.mesh  object_12.mesh  object_13.mesh  object_14.mesh  object_15.mesh  object_16.mesh  object_17.mesh  object_18.mesh  object_19.mesh  object_2.mesh  object_20.mesh  object_21.mesh  object_22.mesh  object_23.mesh  object_24.mesh  object_25.mesh  object_26.mesh  object_27.mesh  object_28.mesh  object_29.mesh  object_3.mesh  object_30.mesh  object_31.mesh  object_32.mesh  object_33.mesh  object_34.mesh  object_35.mesh  object_36.mesh  object_37.mesh  object_38.mesh  object_39.mesh  object_4.mesh  object_40.mesh  object_5.mesh  object_6.mesh  object_7.mesh  object_8.mesh  (+1 more)
